# viirsnow

./: .gitignore  .pdm-python  README.md  pyproject.toml
notebooks/: accuracy.ipynb  article_illustrations.ipynb  article_illustrations.md  article_illustrations_old.ipynb  calibrate_s2_ref_ndsi_threshold.ipynb  code_for_gridding.ipynb  completeness_analysis.ipynb  correct_mf_rejeu_sza.ipynb  dem_resampling.ipynb  estimate_nasa_l3_latency.ipynb  estimate_nasa_products_latency.ipynb  fit_regression_meteofrance.ipynb  fit_regression_nasa.ipynb  launch_completeness_analysis.ipynb  lps_illustration.ipynb  lps_illustration_modis.ipynb  products_completeness.ipynb  regression.ipynb  reproject_geometry_product_for_meteofrance.ipynb  scaterr_plot.ipynb  scatter_plot.ipynb  snow_cover_extent_analysis.ipynb  snow_fraction_radiative_model_exp.ipynb  uncertainty.ipynb  uncertainty_estimation.ipynb  uncertainy.ipynb  validation.ipynb  viirs_data_analysis.ipynb  viirs_snow_products_comparison.ipynb
scripts/: cmdToResampleS2Fsc.sh  launch_reduction.py  launch_regrid.py  nasa_earthdata_download_script_sample.sh  nasa_v10_geo_processing.sh  resample_dem.sh  run_S2_downloader.sh  useful_gdal_commands.txt
src/: NPPhdf2immg_NDSI.py  compression.py  daily_composites.py  fractional_snow_cover.py  geotools.py  grids.py  logger_setup.py  meteofrance_experience.py  metrics.py  nasa_l2_processing.py  nasa_l3_processing.py  process_s2_clms.py  process_viirs_meteofrance.py  process_viirs_nasa.py  products.py  reprojections.py  run_earth_access.py  test_earth_access.py  visualizations.py  winter_year.py
src/evaluations/: completeness.py  confusion_table.py  metrics.py  scatter.py  snow_cover_extent_cross_comparison.py  statistics_base.py  uncertainty.py
src/harmonisation/: daily_composites.py  harmonisation_base.py  meteofrance_l2_to_l3_time_series.py  nasa_l2_download_and_project.py  nasa_l2_to_l3_time_series.py  nasa_l3_to_time_series.py  nasa_to_time_series.py  reprojections.py  sentinel2_to_time_series.py
src/postprocess/: class_distribution.py  error_distribution.py  general_purpose.py  lps_plots.py  scatter_plot.py  skill_scores.py
src/processors/: meteofrance_l2_to_l3_time_series.py  meteofrance_l2_to_time_series.py  nasa_l2_download_and_project.py  nasa_l2_to_l3_time_series.py  nasa_l3_to_time_series.py  sentinel2_to_time_series.py
src/products/: classes.py  filenames.py  georef.py  plot_settings.py  pyhdroweb_download.py  run_earth_access.py  snow_cover_product.py
src/reductions/: completeness.py  confusion_table.py  correlation.py  semidistributed.py  snow_cover_extent_cross_comparison.py  statistics_base.py  uncertainty.py
src/regrid/: regrid_base.py  (+9 more)
